// Synced with blockchain core
// DATE : 12 Nov 2018
// Core Commit : 2af5bda9fbdca1f7053883cfa6ce8c5f9442223c
syntax = "proto3";
package corepb;

message TransactionHashTarget {
  string tx_type = 1;
  bytes from = 2;
  bytes to = 3;
  bytes value = 4;
  int64 timestamp = 5;
  uint64 nonce = 6;
  uint32 chain_id = 7;
  uint32 hash_alg = 8;
  uint32 crypto_alg = 9;
  bytes payload = 11;
}

message TransactionPayerSignTarget {
  bytes hash = 1;
  bytes sign = 2;
}

message DefaultPayload {
  string message = 1;
}

message VotePayload {
  repeated bytes candidates = 1;
}

message AddCertificationPayload {
  int64 issue_time = 1;
  int64 expiration_time = 2;
  bytes hash = 3;
}

message RevokeCertificationPayload {
  bytes hash = 1;
}

message AddRecordPayload {
  bytes hash = 1;
}
